2004-02-03  Richard Spindler <oracle2025@gmx.de>

 * Fixed a Bug that caused a floatingpoint exception in the scrollbar

2004-02-02  Richard Spindler <oracle2025@gmx.de>

 * Added a BPM-Input for Snap Value

2004-01-29  Richard Spindler <oracle2025@gmx.de>

 *  Fixed broken config-file stuff

2004-01-19  Richard Spindler <oracle2025@gmx.de>

 *  Removed a couple of win32 relatet IFDEFs in TLPanel.cpp
 *  fixed Bug in SnapDialog

2004-01-18  Richard Spindler <oracle2025@gmx.de>

 *  The Gungirl picture looks better now

2004-01-15  Richard Spindler <oracle2025@gmx.de>

 *  Added a Feature: use the [shift] Key to position a sample without snap

2004-01-15  Richard Spindler <oracle2025@gmx.de>

 *  Fixed a couple of win32 issues
 *  If Save On Exit fails, it won't exit any more

2004-01-13  Richard Spindler <oracle2025@gmx.de>

 *  Added BigScrollBar.cpp .h

2004-01-10  Richard Spindler <oracle2025@gmx.de>

 *  Added some cool new icons for Wav Export and Snap Width Config
 *  Fixed the screwed up SelectionDrag on win32
 *  Fixed the Selection Border having the wrong colour

2004-01-04  Richard Spindler <oracle2025@gmx.de>

 *  Added ggEvtHandler.cpp .h

2004-01-03  Richard Spindler <oracle2025@gmx.de>

 *  Fixed a Bunch of stuff to improve redrawing on win32

2004-01-02  Richard Spindler <oracle2025@gmx.de>

 *  Added a Master Volume Control
 *  Custom Colours in the Colour Dialog are now saved

2003-12-30  Richard Spindler <oracle2025@gmx.de>

 *  Now using 64Bit Numbers for all Timeline related Data.
 *  Fixed a Bug that coused the Timeline length to explode ;)
 *  Changed Versionnumber in configure.ac to 0.1.1 (Not really sure why :)
 *  Added a cooler Icon for Drag and Drop from Filer

2003-12-29  Richard Spindler <oracle2025@gmx.de>

 *  A Projectfile can now be opened by Commandline now
 *  A Project-File can be dropped to ggseq and will be opened
 *  (thanks to wxGuide ;)
 *  ShortcutsDialog won't be build -> scheduled for 0.3.0 
